# ai-research-agent

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
src/: config.py  tracing.py
src/api/: main.py  models.py  routes.py
src/graph/: __init__.py  builder.py  nodes.py  run.py  state.py
src/ingestion/: chunker.py  embedder.py  fetcher.py  pipeline.py  store.py
src/memory/: __init__.py  session_memory.py
src/tools/: __init__.py  executor.py  retrieval.py  web_search.py
tests/: conftest.py  test_config.py  test_tracing.py
tests/api/: test_routes.py
tests/graph/: test_builder.py  test_nodes.py  test_state.py
tests/ingestion/: test_chunker.py  test_embedder.py  test_fetcher.py  test_store.py
tests/memory/: test_session_memory.py
tests/tools/: test_executor.py  test_retrieval.py  test_web_search.py
